--- a/DBOperationsWithEFCoreApp/DBOperationsWithEFCoreApp/appsettings.json
+++ b/DBOperationsWithEFCoreApp/DBOperationsWithEFCoreApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDb": "Server=LAPTOP-67J1KDVN\\SQLEXPRESS;Database=SampleEF;Integrated Security=true;TrustServerCertificate=True;"
+  }
 }
